--- a/src/app/componentes/datos-de-tareas/datos-de-tareas.component.scss
+++ b/src/app/componentes/datos-de-tareas/datos-de-tareas.component.scss
@@ -36,12 +36,12 @@
 }
 
 .empresa-logo img {
-  width: 90px;
-  height: 90px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   border-radius: 12px;
   margin-bottom: 10px;
-  background: #fff;
+  //background: #fff;
   padding: 6px;
   box-shadow: 0 2px 8px #0001;
   display: block;
@@ -61,7 +61,7 @@
 }
 .empresa-nombre {
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 2.1rem;
   margin-bottom: 2px;
 }
 
@@ -84,7 +84,13 @@
 }
 .cliente-nombre {
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 2.1rem;
+}
+
+.cliente-contacto, .cliente-budgetDate, .cliente-additionalDetails{
+  font-size: 1rem;
+  text-align: left;
+  color: #0b69a6;
 }
 
 .empresa-user-divider {
@@ -126,3 +132,16 @@
     display: block;
     margin-top: 10px;
   }
+
+  .animate{
+  width: 100%;
+  background-color: rgb(44, 121, 208);
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 12px 27px;
+  //font-size: 12px;
+  background-image: linear-gradient(to right top, #3768b1, #3b75c4, #3e82d7, #3f90eb, #409eff);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.0784313725) 0px 1px 0px inset;
+  font-weight: bold;
+
+}
