--- a/src/app/componentes/editar-clientes/editar-clientes.component.html
+++ b/src/app/componentes/editar-clientes/editar-clientes.component.html
@@ -41,7 +41,7 @@
 					<textarea id="additionalDetails" class="form-control" name="additionalDetails"  placeholder="Detalles" [(ngModel)]="cliente.additionalDetails"></textarea>
 				</div>
 				<div class="d-flex justify-content-between">
-					<button type="submit" class="btn btn-success" [disabled]="editForm.invalid">Editar</button>
+					<button type="submit" class="btn btn-success" [disabled]="editForm.invalid">Guardar</button>
 					<button type="button" class="btn btn-secondary" (click)="cancelar()">Cancelar</button>
 				</div>
 			</form>
