--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -743,6 +743,8 @@
     [clienteActual]="clienteSeleccionado"
     [empresaActual]="selectedEmpresaId"
     [clienteActual]="clienteSeleccionado"
+    [tareasDelCliente]="tareasAgregadas"
+
     (cargarPresupuesto)="onCargarPresupuestoGuardado($event)">
   </app-presupuestos-guardados>
 </div>
